tests/errors/syn4.kt
fun noParams {
    println("Missing parentheses")
}